kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    traekik.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: www.poleit.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
    - host: www.minio.poleit.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 80
    - host: www.pma.poleit.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pma
                port:
                  number: 80
